fixed spacing on books#show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,5 +21,9 @@
 }
 
 #pushdown {
-  margin-bottom: 200px;
+  margin-bottom: 160px;
+}
+
+#comment-card {
+  margin-bottom: 20px;
 }
